--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 target/m2e-wtp/web-resources/META-INF/maven/br.com.softsy/front-educacional-caxias/pom.properties
 .settings/org.eclipse.wst.common.project.facet.core.xml
 .classpath
+target/m2e-wtp/web-resources/META-INF/maven/br.com.softsy/front-educacional-caxias/pom.properties
